correct auth form spacing

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ body {
   width: 40%;
   font-size: 1.5rem;
   text-align: left;
+  height: 90%;
   max-height: 90%;
 }
 
